[tool.poetry]
name = "pickyoptions"
version = "0.1.0"
description = "User defined options for Python packages."
authors = ["nickmflorin <nickmflorin@gmail.com>"]
packages = [
    { include = "pickyoptions", from = "src" }
]
include = ["src/*.py"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "0.13.3"
pytest-catchlog = "^1.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
